# frontend

./: .gitignore  Dockerfile  README.md  articles.json  docker-compose.yml  editor.html  index.html  login.html  main.py  package-lock.json  package.json  register.html  requirements.txt  session.json  shell.nix  tailwind.config.js  tailwind.config.js.bak  test.txt  titles.json  users.json  users_articles.json
.github/workflows/: build.yml
app/: auth.py  backend_json.py  data_gen.py  main.py  mkhtml.py  names_list.py
backup/: base.html  home.html  profile.html
markdown-fastapi-rs/: Cargo.toml  pyproject.toml
markdown-fastapi-rs/src/: lib.rs
src/: App.tsx
src/components/Desktop1/: Desktop1.module.css  Desktop1.tsx  MenuButtonIcon.tsx  MingcuteScienceLineIcon.tsx
static/: input.css  output.css  styles.css
templates/: 404.html  articles.html  base.html  confirmation.html  editor.html  header.html  home.html  htmx_test.html  index.html  invalid_credentials.html  login.html  modal.html  my_account.html  profile.html  register.html  richtext_editor  richtext_editor.html  search  search.html  settings.html  success_login.html  user_input.html
templates/components/: contact_details.html  education.html  error_login.html  error_register.html  header.html  header_home.html  hrgroup.html  publication.html  research_experience.html  result.html  save_success.html  success_login.html  success_register.html  test_publication.html
