[package]
name = "markdown-fastapi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "markdown_fastapi_rs"
crate-type = ["cdylib"]

[dependencies]
markdown = "0.3.0"
markdown-rs = "0.1.0"
pyo3 = "0.21.1"
